# yokakademik-bastan-mcp

./: .dockerignore  Dockerfile  README.md  SETUP_GUIDE.md  pyproject.toml  requirements.txt  run_server.py  smithery.yaml  test_mcp_server.py
config/: settings.json
main_codes/public/: fields.json
main_codes/public/collaborator-sessions/session_20250730_093737_61edf7ed/: collaborators.json  main_profile.json
main_codes/public/collaborator-sessions/session_20250730_094239_f0cdc419/: main_profile.json
main_codes/public/collaborator-sessions/session_20250730_094326_96d0dd69/: collaborators.json  main_profile.json
main_codes/scripts/: scrape_collaborators.py  scrape_main_profile.py
sessions/: .gitkeep
sessions/test_optimized_001/: profiles.json  session.json
sessions/test_session_001/: profiles.json  session.json
sessions/test_session_0_535681/: session.json
sessions/test_session_1_535681/: session.json
sessions/test_session_2_535681/: session.json
sessions/test_session_535681/: profiles.json  session.json
src/: __init__.py  mcp_server.py
src/scraper/: __init__.py  academic_scraper.py  session_manager.py
src/utils/: helpers.py
