[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "academic-scraper-mcp"
version = "1.0.0"
description = "MCP Server for Academic Profile Scraping with Real-time Streaming"
authors = [
    {name = "Academic Scraper Team", email = "team@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp @ git+https://github.com/modelcontextprotocol/python-sdk.git",
    "selenium>=4.15.0",
    "webdriver-manager>=4.0.0",
    "pydantic>=2.9.2",
    "aiofiles>=23.2.1",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "python-dateutil>=2.8.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0"
]

[project.scripts]
academic-scraper-mcp = "run_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true 